--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "angular-in-memory-web-api": "~0.2.4",
     "angularfire2": "^2.0.0-beta.7",
     "core-js": "^2.4.1",
-    "ng-bootstrap": "^1.1.16-1",
+    "firebase": "^3.6.5",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.7.4"
