--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angularfire2": "^2.0.0-beta.7",
     "core-js": "^2.4.1",
     "firebase": "^3.6.5",
+    "primeng": "^1.1.4",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.7.4"
